--- a/inventory.html
+++ b/inventory.html
@@ -101,86 +101,129 @@
                     
                   </div>
 
+         <!--hidden Navbar content-->
+            <!--/Navbar-->
+      <section class="InventoryHeaderImg">
+         <h3 class="center-align">Surround Sound</h3>
+      </section>
+      </header>
+      <!--/Header-->
 
-               <!--/Navbar-->
-        <section class="header-image">
-           <h1 class ="center-align">Wireless Was Here</h1>
-           <a class="waves-effect center-align" id="shopNow" href="inventory.html">Shop Now</a>
-        </section>
-  </header>
-          <!--/Header-->
+      <!--feature info-->
+      <section class="featureInfo">
+        <div class="infowrap">
+          <div class="row">
+            <div class="col s12 m12 l12">
+               <h1 class="center-align">Headphones</h1>
+               <p class="center-align">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex quaerat unde ipsum asperiores laborum vero sequi. Atque, itaque quae eligendi exercitationem placeat qui dolorem libero neque fugiat sunt similique voluptates.</p>
+            </div>
+         </div>
+      </div>
+      </section>
 
-          <section class="mainContent">
-             <div class="row">
-                <div class="col s12 m12 l8">
-                   <img class="responsive-img landingPhones" src="img/model.jpeg">
-                </div>
-                <div class="col s12 m12 l4">
-                   <h1 class="center-align">Bass You Can Feel</h1>
-                   <p class="center-align">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, commodi! Mollitia repellendus ratione rerum consectetur repudiandae dolo</p>
-                   <a class="btn" href="support.html">Shop Wireless</a>
-                </div>
-             </div>
-             <div class="row">
-                  <div class="col s12 m12 l5">
-                     <h1 class="center-align">Go Wireless</h1>
-                     <p class="center-align">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, commodi! ollitia repellendus ratione rerum consectetur repudiandae dolo</p>
-                     <a class="btn center-align" href="wireless.html">Shop Wireless</a>
+     <!--Headphone Inventory Display-->
+     <section class="headphones">
+        <div class="row">
+           <div class="col s6 m4 l4">
+             <a href="headphone.html"><img class="responsive-img" src="img/headphone.jpg"></a>
+             <p class="center-align">Wireless Headphones</p>
+             <p class="center-align">$49.99</p>
+           </div>
+           <div class="col s6 m4 l4">
+             <a href="headphone.html"><img class="responsive-img" src="img/headphone2.jpg"></a>
+             <p class="center-align">Wireless Headphones</p>
+             <p class="center-align">$149.99</p>
+           </div>
+           <div class="col s6 m4 l4">
+              <a href="headphone.html"><img class="responsive-img" src="img/headphone3.jpg"></a>
+             <p class="center-align">Wireless Headphones</p>
+             <p class="center-align">$49.99</p>
+           </div>
+        </div>
+        <div class="row">
+            <div class="col s6 m4 l4">
+             <a href="headphone.html"><img class="responsive-img" src="img/headphone4.jpg"></a>
+              <p class="center-align">Wireless Headphones</p>
+              <p class="center-align">$149.99</p>
+            </div>
+            <div class="col s6 m4 l4">
+            <a href="headphone.html"><img class="responsive-img" src="img/headphone5.jpg"></a>
+              <p class="center-align">Wireless Headphones</p>
+              <p class="center-align">$99.99</p>
+            </div>
+            <div class="col s6 m4 l4">
+             <a href="headphone.html"><img class="responsive-img" src="img/headphone6.jpg"></a>
+              <p class="center-align">Wireless Headphones</p>
+              <p class="center-align">$149.99</p>
+            </div>
+         </div>
+     </section>
+
+      <section class="banner">         
+      </section>
+
+
+      <section class="headphoneBanner">
+         <div class="row">
+            <div class="col s12 m12 l6">
+               <img class="responsive-img" src="img/model6.jpg">
+            </div>
+            <div class="col s12 m12 l6">
+               <h1 class="center-align">Explore</h1>
+               <p class="center-align">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis maiores aperiam, corporis unde voluptatum officia possimus ullam necessitatibus at, repellendus, sint fuga rerum ipsam excepturi sapiente deleniti? Voluptatibus, quia modi?</p>
+               <div class="row" id="submenuHP">
+                  <div class="col s3 m3 l3">
+                   <a href="headphone.html"><img class="responsive-img" src="img/headphone5.jpg"></a>
                   </div>
-                  <div class="col s12 m12 l7">
-                    <img class="responsive-img landingPhones" src="img/model10.jpeg">
+                  <div class="col s3 m3 l3">
+                  <a href="headphone.html"><img class="responsive-img" src="img/headphone6.jpg"></a>
+                  </div>
+                  <div class="col s3 m3 l3">
+                  <a href="headphone.html"><img class="responsive-img" src="img/headphone4.jpg"></a>
                   </div>
                </div>
-          </section>
-        <!--Sign Up-->
-           <section class="signUp">
-              <div class="signUpWrap">
-                  <i class="far fa-envelope"></i>
-                  <h4>Sign Me Up</h4>
-                  <p>Join the FireSkull Family</p>
-                  <form>
-                  <input type="email" placeholder="Email Address">
-                </form>
-                <a class="btn" href="#"><i class="fas fa-chevron-circle-right"></i></a>
+            
             </div>
-       </section>
+         </div>
+      </section>
+
 
        <!--Footer-->
        <footer class="footerBottom">
-         <div class="footerWrap">
-          <div class="row">
-            <div class="col s4">
-              <ul>
-                <li>Support</li>
-                <li>FAQ</li>
-                <li>Warranty</li>
-              </ul>
-            </div>
-            <div class="col s4">
-                <ul>
-                  <li>Account</li>
-                  <li>Order Status</li>
-                  <li>Contact Us</li>
-                </ul>
-              </div>
-              <div class="col s4">
-                  <ul>
-                    <li>Our Story</li>
-                    <li>Press Release</li>
-                    <li>Jobs</li>
-                  </ul>
-                </div>
-          </div>
-        </div>
-       </footer>
-
-
-
-<!--jQuery-->
-<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<!--Materialze JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-<!--Main JS-->
-<script src="js/app.js"></script>
-</body>
-</html>
+            <div class="footerWrap">
+             <div class="row">
+               <div class="col s4">
+                 <ul>
+                   <li>Support</li>
+                   <li>FAQ</li>
+                   <li>Warranty</li>
+                 </ul>
+               </div>
+               <div class="col s4">
+                   <ul>
+                     <li>Account</li>
+                     <li>Order Status</li>
+                     <li>Contact Us</li>
+                   </ul>
+                 </div>
+                 <div class="col s4">
+                     <ul>
+                       <li>Our Story</li>
+                       <li>Press Release</li>
+                       <li>Jobs</li>
+                     </ul>
+                   </div>
+             </div>
+           </div>
+          </footer>
+   
+   
+   
+   <!--jQuery-->
+   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+   <!--Materialze JS-->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+   <!--Main JS-->
+   <script src="js/app.js"></script>
+   </body>
+   </html>
