--- a/wireless.html
+++ b/wireless.html
@@ -102,85 +102,65 @@
                   </div>
 
 
+              <!--hidden Navbar content-->
                <!--/Navbar-->
-        <section class="header-image">
+        <section class="header-image3">
            <h1 class ="center-align">Wireless Was Here</h1>
            <a class="waves-effect center-align" id="shopNow" href="inventory.html">Shop Now</a>
         </section>
   </header>
           <!--/Header-->
+   <body>
 
-          <section class="mainContent">
-             <div class="row">
-                <div class="col s12 m12 l8">
-                   <img class="responsive-img landingPhones" src="img/model.jpeg">
-                </div>
-                <div class="col s12 m12 l4">
-                   <h1 class="center-align">Bass You Can Feel</h1>
-                   <p class="center-align">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, commodi! Mollitia repellendus ratione rerum consectetur repudiandae dolo</p>
-                   <a class="btn" href="support.html">Shop Wireless</a>
-                </div>
-             </div>
-             <div class="row">
-                  <div class="col s12 m12 l5">
-                     <h1 class="center-align">Go Wireless</h1>
-                     <p class="center-align">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur, commodi! ollitia repellendus ratione rerum consectetur repudiandae dolo</p>
-                     <a class="btn center-align" href="wireless.html">Shop Wireless</a>
-                  </div>
-                  <div class="col s12 m12 l7">
-                    <img class="responsive-img landingPhones" src="img/model10.jpeg">
-                  </div>
-               </div>
-          </section>
-        <!--Sign Up-->
-           <section class="signUp">
-              <div class="signUpWrap">
-                  <i class="far fa-envelope"></i>
-                  <h4>Sign Me Up</h4>
-                  <p>Join the FireSkull Family</p>
-                  <form>
-                  <input type="email" placeholder="Email Address">
-                </form>
-                <a class="btn" href="#"><i class="fas fa-chevron-circle-right"></i></a>
-            </div>
-       </section>
 
-       <!--Footer-->
+
+
+
+
+
+
+
+
+
+
+
+
+            <!--Footer-->
        <footer class="footerBottom">
-         <div class="footerWrap">
-          <div class="row">
-            <div class="col s4">
-              <ul>
-                <li>Support</li>
-                <li>FAQ</li>
-                <li>Warranty</li>
-              </ul>
-            </div>
-            <div class="col s4">
-                <ul>
-                  <li>Account</li>
-                  <li>Order Status</li>
-                  <li>Contact Us</li>
-                </ul>
-              </div>
-              <div class="col s4">
-                  <ul>
-                    <li>Our Story</li>
-                    <li>Press Release</li>
-                    <li>Jobs</li>
-                  </ul>
-                </div>
-          </div>
-        </div>
-       </footer>
-
-
-
-<!--jQuery-->
-<script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-<!--Materialze JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-<!--Main JS-->
-<script src="js/app.js"></script>
-</body>
-</html>
+            <div class="footerWrap">
+             <div class="row">
+               <div class="col s4">
+                 <ul>
+                   <li>Support</li>
+                   <li>FAQ</li>
+                   <li>Warranty</li>
+                 </ul>
+               </div>
+               <div class="col s4">
+                   <ul>
+                     <li>Account</li>
+                     <li>Order Status</li>
+                     <li>Contact Us</li>
+                   </ul>
+                 </div>
+                 <div class="col s4">
+                     <ul>
+                       <li>Our Story</li>
+                       <li>Press Release</li>
+                       <li>Jobs</li>
+                     </ul>
+                   </div>
+             </div>
+           </div>
+          </footer>
+   
+   
+   
+   <!--jQuery-->
+   <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+   <!--Materialze JS-->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+   <!--Main JS-->
+   <script src="js/app.js"></script>
+   </body>
+   </html>
