--- a/headphone.html
+++ b/headphone.html
@@ -110,7 +110,7 @@
             <section class="headphoneDisplay">     
                 <div class="wrap">
                   <div class="row">
-                    <div class="col s12 m4 l4" id="galleryImgs">
+                    <div class="col s12 m4 l4 galleryImgs">
                       <img class="responsive-img" src="img/view.jpg">
                       <img class="responsive-img" src="img/view2.jpg">
                       <img class="responsive-img" src="img/view3.jpg">
