--- a/support.html
+++ b/support.html
@@ -118,7 +118,7 @@
            <div class="row">
              <div class="col l8">
                <h2>Contact</h2>
-                <div class="col s12">
+                <div class="col s12 l12">
                        <form>
                          <div>
                            <input type="text" placeholder="Name">
